--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
             //used for all new packages in IDE
             'transport.defaultAmdNamespace': "amber-test"
         }).then(function () {
-            require(["amber-ide-starter-dialog"], function (dlg) {
-                dlg.start();
-            });
+            require('amber/helpers').popupHelios();
             amber.globals.Test._start();
         });
     });
